изменил read_hw так как неправильно работал

--- a/Frametest/Frametest.vcxproj
+++ b/Frametest/Frametest.vcxproj
@@ -18,6 +18,13 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\ConsoleCpp\frame.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\ConsoleCpp\frame.cpp" />
+    <ClCompile Include="Main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
