тут решил несколькими способами двоичную имею виду я нашел как минимум 5 способов)

--- a/Associative container/Sasha test/Sasha test.vcxproj
+++ b/Associative container/Sasha test/Sasha test.vcxproj
@@ -18,21 +18,11 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="iostream.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="map.cpp" />
-    <ClCompile Include="split.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="map.h" />
-    <ClInclude Include="split.h" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1d5bfe8d-8fc6-4792-8de6-22afbf1a2011}</ProjectGuid>
-    <RootNamespace>Associativecontainer</RootNamespace>
+    <ProjectGuid>{de3b2aea-3f71-4299-be0b-f4b32af066ea}</ProjectGuid>
+    <RootNamespace>Sashatest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -136,6 +126,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="Sasha test.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
