--- a/Associative container/Associative container/Associative container.vcxproj
+++ b/Associative container/Associative container/Associative container.vcxproj
@@ -19,12 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Grammar.cpp" />
     <ClCompile Include="iostream.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="map.cpp" />
     <ClCompile Include="split.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Grammar.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="split.h" />
   </ItemGroup>
