--- a/Associative container/Associative container/Associative container.vcxproj.filters
+++ b/Associative container/Associative container/Associative container.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClCompile Include="split.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="Grammar.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="map.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="split.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Grammar.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
